Bug 167526 - Fileopen DOCX Paragraph inserted between adjacent floating tables
Summary: Fileopen DOCX Paragraph inserted between adjacent floating tables
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.1
Keywords: bibisected, bisected
Depends on:
Blocks: DOCX-Floatingtable
  Show dependency treegraph
 
Reported: 2025-07-16 16:10 UTC by Timur
Modified: 2025-08-11 10:11 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Timur 2025-07-16 16:10:37 UTC
Use sample attachment 201488 [details] from bug 167229.
Sample has adjacent tables, LO opens with paragraph between, which then spoils line numbering.
When saved, that additional paragraph is also shown and counted in MSO.

The issue started from:

commit 1c99616f86f7d5b83b91edc225fc95fec227d710	[log]
author	Miklos Vajna <vmiklos@collabora.com>	Tue May 02 08:15:33 2023 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	Tue May 02 16:35:52 2023 +0200
sw floattable, crashtesting: fix PDF export of forum-mso-en3-26783.docx
Comment 1 Mike Kaganski 2025-07-16 16:46:03 UTC
There are two problems here.

I limit this to the "When saved, that additional paragraph is also shown and counted in MSO" part.
The "LO opens ... then spoils line numbering" part needs a separate report. It is a separate fix to not count dedicated dummy paragraphs.
Comment 2 Mike Kaganski 2025-07-16 18:39:12 UTC
https://gerrit.libreoffice.org/c/core/+/187975
Comment 3 Commit Notification 2025-07-16 19:32:01 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/49279f6a01c4f07b723072c068a9c1eab5b7f292

tdf#167526: write floating tables anchored to dummy nodes immediately

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2025-08-11 10:11:27 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/40ce124cc68248527b0c1ea5b5c7662132c0600a

tdf#167526: write floating tables anchored to dummy nodes immediately

It will be available in 25.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.