tdf#167526: write floating tables anchored to dummy nodes immediately

Commit 441aed20b95ee40dec1df72fb8e8167d0e48c0c4 (tdf#167379 sw floattable:
make dummy paragraph from DOCX import less visible, 2025-07-10) introduced
dummy nodes as invisible anchors for floating tables without normal anchor
nodes. Commit c9851022d102a2abfc16c033c0249f24573300e7 took care to avoid
their export to DOCX, not calling OutputTextNode in OutputContentNode for
them, and handling their tables as soon as the next text node is handled.

However, this didn't work, when the next node wasn't a text node. In that
case, the dummy paragraph wasn't detected as such in CollectFloatingTables,
and got exported as normal; and after reload, it appeared after its table.

Fix that by making sure to write floating tables as soon as the dummy node
is handled.

1. Make previously static checkAndWriteFloatingTables a virtual method of
AttributeOutputBase, implemented in DocxAttributeOutput.

2. Let MSWordExportBase::OutputTextNode check if it handles a dummy node,
and if so, call AttrOutput().CheckAndWriteFloatingTables, and return.

3. Revert to calling OutputTextNode in MSWordExportBase::OutputContentNode
unconditionally.

This simplifies the logic a bit, avoiding the need to care about postponed
actions, potentially in multiple places.

Change-Id: I41b57103fc8b4522e3b5b1810389db078719b9b1
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187975
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>